<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/onboarding"
    android:background="@color/background">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/onboarding_title"
        android:textAlignment="center"
        android:fontFamily="@font/sf_b"
        android:textAppearance="@style/TextAppearance.Atlas.Headline1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_description"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Atlas.Body2"
        android:fontFamily="@font/sf"
        android:textColor="@color/text_secondary"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <ImageView
        android:id="@+id/imageOnboarding"
        android:layout_width="0dp"
        android:layout_height="426dp"
        android:layout_marginHorizontal="24dp"
        android:contentDescription="@string/onboarding_image_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/img_onboarding"
        app:layout_constraintBottom_toTopOf="@id/startButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/onboarding_button"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.Atlas.Body2"
        android:backgroundTint="@color/secondary"
        app:iconTint="@color/primary"
        android:textColor="@color/text_on_button"
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="textEnd"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/termsButton" />

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/termsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/onboarding_terms"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.Atlas.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>