<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_contact_title"
        android:fontFamily="@font/sf_b"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Atlas.Headline1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_contact_subtitle"
        android:textAppearance="@style/TextAppearance.Atlas.Body2"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        android:fontFamily="@font/sf"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"/>

    <!-- Kontak Darurat 1 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact1Layout"
        style="@style/SecondaryEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        app:boxStrokeWidth="3dp"
        android:hint="@string/emergency_contact_1_hint"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_add_contact"
        app:layout_constraintTop_toBottomOf="@id/subtitleText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contact1Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:focusable="false"
            android:clickable="true"
            android:fontFamily="@font/sf"
            android:textColor="@color/secondary"
            android:textColorHint="@color/secondary"
            app:hintTextAppearance="@style/TextAppearance.Atlas.Body2"
            android:cursorVisible="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Kontak Darurat 2 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact2Layout"
        style="@style/SecondaryEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        app:boxStrokeWidth="3dp"
        android:hint="@string/emergency_contact_2_hint"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_add_contact"
        app:layout_constraintTop_toBottomOf="@id/contact1Layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contact2Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:focusable="false"
            android:clickable="true"
            android:fontFamily="@font/sf"
            android:textColor="@color/secondary"
            android:textColorHint="@color/secondary"
            app:hintTextAppearance="@style/TextAppearance.Atlas.Body2"
            android:cursorVisible="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Kontak Tim SAR -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sarContactLayout"
        style="@style/SecondaryEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        app:boxStrokeWidth="3dp"
        android:hint="@string/sar_contact_hint"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_sar"
        app:layout_constraintTop_toBottomOf="@id/contact2Layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sarContactInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:enabled="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/save_contacts"
        android:fontFamily="@font/sf_m"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/text_on_button"
        android:textAppearance="@style/TextAppearance.Atlas.Body2"
        app:icon="@drawable/ic_arrow_forward"
        app:iconTint="@color/primary"
        app:iconGravity="textEnd"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout> 